Fix hero alignment to clear couple's faces

--- a/style.css
+++ b/style.css
@@ -120,9 +120,6 @@ nav {
     width: 100%;
     height: 100vh;
     min-height: 700px;
-    display: flex;
-    align-items: flex-end;
-    padding-bottom: 10vh;
     overflow: hidden;
 }
 
@@ -136,7 +133,9 @@ nav {
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: center;
+    padding-bottom: 6rem;
 }
 
 .hero-overlay {
